kubernetes/apps/base/productivity/kanbn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kanbn-internal
spec:
  hostnames: ["kanbn.sud0.net"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kanbn
          namespace: productivity
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
